bauer/tests/ui/on-index-oob.fail.stderr
error: index out of bounds: there were 1 matches but the index is 1, if you intended a literal '#1', use '# #1'
 --> tests/ui/on-index-oob.fail.rs:4:33
  |
4 | #[builder(on(Vec<_> => repeat = #1))]
  |                                 ^^

warning: unused variable: `foo`
 --> tests/ui/on-index-oob.fail.rs:6:5
  |
6 |     foo: Vec<u32>,
  |     ^^^ help: if this is intentional, prefix it with an underscore: `_foo`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
